--- a/src/app/presentation/views/agencies/agencies-list/agencies-list.component.html
+++ b/src/app/presentation/views/agencies/agencies-list/agencies-list.component.html
@@ -8,96 +8,7 @@
     </div>
 
     <mat-list role="list" aria-hidden="false">
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider> 
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider> 
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item aria-hidden="false" (click)="goDetailAgency(1)">
-            <img matListAvatar src="http://via.placeholder.com/40x40">
-            <div mat-line class="agency-list-name">Agencia 1</div>
-            <div mat-line class="agency-list-district">Lima</div>
-            <div mat-line class="agency-list-av">Avenida 123</div>
-            <button mat-icon-button color="primary">
-                <mat-icon>star_outline</mat-icon>
-            </button>
-        </mat-list-item>
-        <mat-divider></mat-divider>
+        <app-agency-item *ngFor="let agency of agencies" [agency]="agency"></app-agency-item>
     </mat-list>
 </div>
 <div class="wrapper-btn-actions-fixed">
