--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ body { margin: 0;}
 
     position: fixed;
     overflow: scroll;
-    // height: 590px;
+    height: 100%;
     width: 100%;
 
     .mat-list-item {
